fixed: navbar margin spacing

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     font-family: 'Avenir-Demi';
-    margin: 1.2rem 2rem;
+    margin: 2rem 4rem;
     font-size: 0.8rem;
 
     li{
